# fastapi-async-sagemaker-app

./: .gitignore  Dockerfile  Dockerfile.sagemaker  README.md  docker-compose.yml  dotenv.sample  main.py  pyproject.toml  request_test.py  sagemaker_endpoint.py
aws/: config.sample  credentials.sample
