[tool.poetry]
name = "fastapi-sample-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
pytest = "^6.0.1"
requests = "^2.24.0"
aiohttp = "^3.6.2"
aiobotocore = "^1.1.1"
boto3 = "^1.14.44"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
